...
  void initState() {
    super.initState();
    _animationNotifier = ValueNotifier(false);
    _pageController = PageController(initialPage: 1);
    _screens = [
      const GeneralScreen(
        key: Key("generalScreenKey"),
      ),
      const SubscriptionScreen(
        key: Key("subscriptionScreenKey"),
      ),
    ];
    WidgetsBinding.instance.addPostFrameCallback((_) {
      _animationNotifier.value = true;
    });
  }
...
