...
                        GestureDetector(
                          onTap: () => _onChanged(0),
                          child: Icon(
                            _selectedIndex == 0
                                ? Icons.dashboard_customize
                                : Icons.dashboard_customize_outlined,
                            key: const Key("dashboardIconKey"),
                            color: Colors.white,
                            size: 20.0,
                          ),
                        ),
                        AnimatedSize(
                          duration: Durations.medium1,
...
                      GestureDetector(
                        onTap: () => _onChanged(1),
                        child: Icon(
                          _selectedIndex == 1
                              ? Icons.subscriptions
                              : Icons.subscriptions_outlined,
                          key: const Key("subscriptionsIconKey"),
                          color: Colors.white,
                          size: 20.0,
                        ),
                      ),
                      AnimatedSize(
                        duration: Durations.medium1,
...
