...
                child: AnimatedOpacity(
                  key: const Key("getStartedAnimatedOpacityKey"),
                  opacity: _initial ? 0.0 : 1.0,
                  duration: Durations.long1,
                  curve: Curves.easeOutCubic,
                  child: ElevatedButton(
                    key: const Key("getStartedButtonKey"),
                    onPressed: () {
                      setState(() {
                        _tappedContinue = true;
                      });
                      Future.delayed(const Duration(milliseconds: 700), () {
                        if (!context.mounted) return;
                        Navigator.pushReplacement(
                          context,
                          PageRouteBuilder(
                            transitionsBuilder: (_, a, __, c) =>
                                FadeTransition(opacity: a, child: c),
                            pageBuilder: (_, __, ___) => const HomeScreen(
                              key: Key("homeScreenKey"),
                            ),
                          ),
                        );
                      });
                    },
                    style: ElevatedButton.styleFrom(
...
